parse-display/tests/compile_fail/from_str/opt_with_not_option.rs
use parse_display::FromStr;

#[derive(FromStr, PartialEq, Debug)]
struct X {
    #[display("a={}", opt)]
    a: u32,
}

fn main() {}
